[tool.poetry]
name = "mobile_text_wrapper"
version = "1.0"
description = "Wrapper for Mobile Text Alerts"
authors = ["Owlcept <owlcept@owlcept.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
