[tool.poetry]
name = "mobile_text_wrapper"
version = "1.0"
description = "Wrapper for Mobile Text Alerts"
authors = ["Owlcept <owlcept@owlcept.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
